<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.zype.android.ui.main.fragments.playlist.PlaylistFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <ListView
        android:id="@+id/list_playlist"
        tools:listitem="@layout/list_item_playlist"
        style="@style/playlist_list"
        />
<!--
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listPlaylists"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />
-->

    <TextView
        android:id="@+id/empty"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/text.title"
        android:gravity="center"
        android:text=""/>

</FrameLayout>