<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    style="@style/activity.padding"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zype.android.ui.main.fragments.settings.SettingsFragment">

    <ListView
        android:id="@+id/list_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sign_in_button"
        android:divider="@drawable/list_latest_divider"
        android:dividerHeight="1dp"/>

<!--
    <FrameLayout
        android:id="@+id/fake_sign_in_button"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/accent">

-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/sign_in_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            />
<!--
    </FrameLayout>
-->


</RelativeLayout>
